(fix) change checkbox circle check position it was off-centered.

--- a/src/css/active-styling.css
+++ b/src/css/active-styling.css
@@ -117,7 +117,7 @@ ul[complete="Yes"] {
   background-color: rgb(113, 28, 28);
 
   left: 1.5px;
-  top: 1.5px;
+  top: 1.3px;
 
 }
 
